src/as/msoy.css
/* ... */
.selectedRoomTab {
  buttonSkin: Embed(source="../../rsrc/media/skins/tab/tab_room_selected.png",
    scaleGridTop="3", scaleGridBottom="17", scaleGridLeft="3", scaleGridRight="17");
}

.unselectedTellTab, .attentionTellTab {
  buttonSkin: Embed(source="../../rsrc/media/skins/tab/tab_tell_unselected.png",
    scaleGridTop="3", scaleGridBottom="17", scaleGridLeft="3", scaleGridRight="17");
}

.selectedTellTab {
  buttonSkin: Embed(source="../../rsrc/media/skins/tab/tab_tell_selected.png",
    scaleGridTop="3", scaleGridBottom="17", scaleGridLeft="3", scaleGridRight="17");
}

.unselectedGroupTab, .attentionGroupTab {
  buttonSkin: Embed(source="../../rsrc/media/skins/tab/tab_group_unselected.png",
    scaleGridTop="3", scaleGridBottom="17", scaleGridLeft="3", scaleGridRight="17");
}

.selectedGroupTab {
  buttonSkin: Embed(source="../../rsrc/media/skins/tab/tab_group_selected.png",
    scaleGridTop="3", scaleGridBottom="17", scaleGridLeft="3", scaleGridRight="17");
}

.tabCheckBox {
  downSkin: Embed(source="../../rsrc/media/skins/checkbox/tab_down.png");
  upSkin: Embed(source="../../rsrc/media/skins/checkbox/tab.png");
  overSkin: Embed(source="../../rsrc/media/skins/checkbox/tab_over.png");
  selectedUpSkin: Embed(source="../../rsrc/media/skins/checkbox/tab_selected.png");
}

.controlBar, .headerBar { 
  horizontalGap: 0;
  verticalGap: 0;
  borderStyle: "none";
  paddingBottom: 0;
  paddingTop: 0;
  paddingLeft: 0;
  paddingRight: 0;
}

.controlBar {
  backgroundColor: white;
}

.controlBarText { 
  color: #dddddd;
}

.controlBarButtons {
  fillAlphas: 0.6, 0.4;
}

.controlBarButtonAvatar {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_avatar.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_avatar_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_avatar_down.png");
}

.controlBarButtonPet {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_pet.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_pet_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_pet_down.png");
  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_pet.png");
}

.controlBarButtonChat {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_chat.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_chat_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_chat_down.png");
}

.controlBarButtonEdit {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit_down.png");
  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit_disabled.png");
  selectedUpSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit_down.png");
  selectedDownSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit_down.png");
  selectedOverSkin: Embed(source="../../rsrc/media/skins/controlbar/button_edit_down.png");
}

.controlBarButtonVolume {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_volume.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_volume_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_volume_down.png");
}

.controlBarButtonZoom {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_zoom.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_zoom_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_zoom_down.png");
  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_zoom_disabled.png");
}

.controlBarButtonScale {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
}

.controlBarHoverZone {
  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/hoverzone.png");
}

.controlBarButtonSnapshot {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/button_snapshot.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/button_snapshot_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/button_snapshot_down.png");
  disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_snapshot_disabled.png");
}

.controlBarFriendButton {
  upSkin: Embed(source="../../rsrc/media/skins/controlbar/friends_up.png");
  overSkin: Embed(source="../../rsrc/media/skins/controlbar/friends_over.png");
  downSkin: Embed(source="../../rsrc/media/skins/controlbar/friends_down.png");
}

.controlBarFriendButtonBox {
  backgroundImage: Embed(source="../../rsrc/media/skins/controlbar/footer_tile.png");
  backgroundSize: "100%";
  borderStyle: "none";
  paddingTop: 1;
  paddingRight: 4;
  horizontalGap: 0;
  verticalGap: 0;
}

.controlBarSpacer { 
  backgroundImage: Embed(source="../../rsrc/media/skins/controlbar/footer_tile.png");
  backgroundSize: "100%";
  borderStyle: "none";
  horizontalAlign: "right";
  paddingRight: 10;
}

.roomEditPanel {  
  paddingBottom: 0;
  paddingTop: 0;
  paddingLeft: 0;
  paddingRight: 0;
  horizontalGap: 0;
  verticalGap: 1;
} 

.roomEditDetailsPanelGrid { 
  horizontalGap: 1;
  verticalGap: 2;
}

BasePanel { 
  backgroundDisabledColor: #e0eaeb;
  disabledColor: #e0eaeb;
}

.roomEditNameBar {  
  backgroundImage: Embed(source="../../rsrc/media/skins/button/roomeditor/name_bar_tile.png",
          scaleGridTop="10", scaleGridBottom="13",
          scaleGridLeft="10", scaleGridRight="20");
  backgroundSize: "100%";
  borderStyle: "none";
  paddingBottom: 5;
  paddingTop: 5;
  paddingLeft: 8;
  paddingRight: 8;
} 
/* ... */

